--- a/login.html
+++ b/login.html
@@ -193,18 +193,18 @@
 
         }, {
 
-            "email": "john.doe@example.com",
-            "password": "DoePass!456",
+            "email": "nak@example.com",
+            "password": "456",
 
         }, {
 
-            "email": "jane.doe@example.com",
-            "password": "JaneDoe!789",
+            "email": "phea@example.com",
+            "password": "789",
 
         }, {
 
-            "email": "alice.wong@example.com",
-            "password": "AliceWong!012",
+            "email": "dy@example.com",
+            "password": "012",
 
         }];
 
