--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>2.0
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -402,7 +402,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>4.0
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 199</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -432,7 +432,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>2.5
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -462,7 +462,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>3.0
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 299</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -492,7 +492,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>5.0
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -522,7 +522,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>4.5
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -552,7 +552,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>3.0
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -582,7 +582,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>3.5
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 149</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -611,7 +611,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>3.5
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -643,7 +643,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>2.5
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 299</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -673,7 +673,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>2.0
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
@@ -703,7 +703,7 @@
                         <div class="d-flex">
                             <small class="flex-fill text-left p-2 px-2"><i class="fa fa-clock me-2"></i>1.5
                                 Hrs</small>
-                            <small class="py-1 px-2 fw-bold fs-6 text-center">₹ 0</small>
+                            <small class="py-1 px-2 fw-bold fs-6 text-center">$ 0</small>
                             <small class=" text-primary py-1 px-2 fw-bold fs-6" style="float:right;"><a href="#">Enroll
                                     Now </a><i class="fa fa-chevron-right me-2 fs-10"></i></small>
                         </div>
